# data-pipelines

./: .env.prod.secret  .env.secret  .flake8  .gitignore  .mergify.yml  Dockerfile  Makefile  README.md  airflow.cfg  deploy.sh  docker-compose.yaml  markdown.md  pyproject.toml  setup.cfg
libraries/clickhouse-helpers/: .env  .env.prod  .env.prod.secret  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
libraries/clickhouse-helpers/clickhouse_helpers/: __init__.py  cli.py  conftest.py  db_context.py  db_test_context.py  execute_sql.py  test_cli.py  test_db_context.py  test_execute_sql.py  types.py
libraries/clickhouse-helpers/clickhouse_helpers/db_context/: __init__.py  db_context.py  db_test_context.py  test_db_context.py
libraries/clickhouse-helpers/clickhouse_helpers/execute_sql/: __init__.py  execute_sql.py  test_execute_sql.py
libraries/clickhouse-helpers/clickhouse_helpers/migrations/: migrations.py  test_migrations.py
libraries/clickhouse-helpers/clickhouse_helpers/migrations/migration_files/: 20210726_01_QvjMc-test-migration.sql  20220217_00_add_epoch_table.sql  2022102401_add_raw_epoch_tables.sql  2022102402_add_raw_epoch_tables.sql  2022102403_add_raw_epoch_tables.sql  2022102405_add_raw_epoch_tables.sql  2022102406_add_raw_epoch_tables.sql  20221024_04_add_raw_epoch_tables.sql
libraries/clickhouse-helpers/clickhouse_helpers/migrations/migration_tests/: DailyDynamicValue.csv  test_add_epoch_sync_tables.py  test_add_epoch_table.py
libraries/clickhouse-helpers/docker/clickhouse/: init.sql  users.yaml
libraries/database/: .env  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
libraries/database/database/: db_context.py  db_test_context.py  execute_sql.py  test_db_context.py
libraries/database/database/migrations/: migrations.py  test_migrations.py
libraries/database/database/migrations/migration_files/: 20210802_01_create_schema_coronacases.sql  20210802_02_add_corona_cases_table.rollback.sql  20210809_01_add_census_schema.sql  20210809_02_add_nuts_regions_table.rollback.sql  20210810_02_add_population_table.rollback.sql  20210810_02_add_population_table.sql  20210825_01_add_german_counties_more_info_table.sql  20210913_01_add_german_counties_incidence_table.sql  20211007_00_add_datenspende_schema.rollback.sql  20211020_00_add_constraint_on_population_table.sql  20211025_00_add_datenspende_derivatives_schema.sql  20211109_00_add_german_hospitalizations_table.sql  20211116_00_add_test_and_symptoms_features.sql  20211120_02_add_datenspende_vitaldata.rollback.sql  20211120_02_add_datenspende_vitaldata.sql  20211202_00_add_symptom_f43_to_homogenized_features.sql  20211202_01_add_unique_constraint_to_feature_ids.sql  20220203_00_add_columns_for_fatigue_and_fever_to_features.sql  20220204_00_remove_agegroup2_from_cases.rollback.sql  20220204_00_remove_agegroup2_from_cases.sql  20220204_00_remove_cols_from_cases.rollback.sql  20220204_00_remove_cols_from_cases.sql  20220301_00_add_insert_table_name_here.sql  20220301_01_add_insert_table_name_here.sql  20220307_00_add_link_columns_to_features.sql
libraries/database/database/migrations/migration_tests/: test_feature_table.py  test_nuts_regions.py
libraries/postgres-helpers/: Makefile  pyproject.toml  wait-for-healthy-container.sh
libraries/postgres-helpers/postgres_helpers/: __init__.py  conftest.py  db_context.py  db_test_context.py  execute_sql.py
libraries/postgres-helpers/postgres_helpers/migrations/: migrations.py  test_migrations.py
libraries/postgres-helpers/postgres_helpers/migrations/migration_files/: 20210809_01_add_census_schema.rollback.sql  20211109_00_add_german_hospitalizations_table.rollback.sql  20211116_00_add_test_and_symptoms_features.sql  20211209_00_add_questionnaire_session_to_homogenized_features.sql  20220203_00_add_columns_for_fatigue_and_fever_to_features.rollback.sql  (+24 more)
libraries/rocs-classifiers/: Makefile  pyproject.toml
libraries/rocs-classifiers/rocs_classifiers/: __init__.py
libraries/rocs-classifiers/rocs_classifiers/mixed_linear_rhr_steps_and_symptoms/: model.py  test_model.py
services/airflow/: .env  .env.prod.secret  .env.secret  .gitignore  Makefile  README.md  airflow.cfg  deploy.sh  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  setup.cfg  tmp.env
services/airflow/dags/: conftest.py
services/airflow/dags/corona_cases/: dag.py  test_integration_dag.py
services/airflow/dags/csv_download_to_postgres/: csv_download_to_postgres.py  test_csv_download_to_postgres.py  test_integration_csv_download_to_postgres.py
services/airflow/dags/database/: __init__.py  db_test_context.py  execute_sql.py
services/airflow/dags/datenspende/: dag.py  test_integration_dag.py
services/airflow/dags/datenspende_vitaldata/: dag.py  test_integration_dag.py
services/airflow/dags/datenspende_vitaldata_historic/: dag.py
services/airflow/dags/hello_world/: test_hello_world.py
services/airflow/dags/nuts_regions_population/: dag.py  test_integration_dag.py  test_tasks.py
services/airflow/dags/update_hospitalizations/: dag.py  download_hospitalizations.py  etl_hospitalizations.py  test.py  test_download_hospilizations.py  test_etl_hospitalizations.py  test_integration_dag.py  test_transform_dataframe.py  transform_dataframe.py
services/airflow/docker/airflow/: Dockerfile  Dockerfile_dev
services/airflow/docker/clickhouse/: init.sql
services/airflow/docker/nginx/: Dockerfile
services/airflow/files/static/: coronacases.csv  coronacases2.csv  countyID_mapping.csv  demo_r_pjangrp3.tsv  hospitalizations.csv  test_ch.csv
services/airflow/files/thryve/: export.7z  exportStudy.7z  exportStudy_reduced.7z  export_time_series.7z  export_with_outlier.7z  fill_gaps.7z
services/airflow/src/: conftest.py
services/dbt/: .env.secret  .gitignore  .pre-commit-config.yaml  .user.yml  Makefile  README.md  dbt_project.yml  netlify.toml  profiles.yml  pyproject.toml
services/dbt/models/: overview.md  raw_data.yml
services/dbt/models/datenspende/: profiles.yml  raw_data.md  raw_data.yml  schema.yml  test_dbt.sql
(+420 files in other folders)
