[tool.poetry]
name = "dbt"
version = "0.1.0"
description = "dbt models for rocs"
authors = ["jakobkolb <jakob.j.kolb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-postgres = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
