[tool.poetry]
name = "dbt"
version = "0.1.0"
description = "dbt models for rocs"
authors = ["jakobkolb <jakob.j.kolb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-postgres = "^1.1.0"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
